@@ -1,6 +1,7 @@
 Revision history for exact
 
 {{$NEXT}}
+        - Improve/fix import of packages into other packages (resolves issue #4)
 
 1.22      2023-08-22 08:18:14-07:00 America/Los_Angeles
         - Relocate no experimental warnings (order of operations)
